checkpoint login role

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tanem/react-nprogress": "^5.0.53",
     "@vitejs/plugin-react": "^4.3.4",
     "apexcharts": "^4.3.0",
+    "axios": "^1.13.2",
     "bootstrap": "5.3.3",
     "feather-icons-react": "^0.7.0",
     "lodash-es": "^4.17.21",
