--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "apexcharts": "^4.3.0",
     "axios": "^1.13.2",
     "bootstrap": "5.3.3",
+    "chart.js": "^4.5.1",
     "feather-icons-react": "^0.7.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.561.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
